tests/ui/nll/ty-outlives/projection-where-clause-env-wrong-lifetime.stderr
error[E0309]: the associated type `<T as MyTrait<'_>>::Output` may not live long enough
  --> $DIR/projection-where-clause-env-wrong-lifetime.rs:14:5
   |
LL | fn foo1<'a, 'b, T>() -> &'a ()
   |         -- the associated type `<T as MyTrait<'_>>::Output` must be valid for the lifetime `'a` as defined here...
...
LL |     bar::<<T as MyTrait<'a>>::Output>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `<T as MyTrait<'_>>::Output` will meet its required lifetime bounds
   |
   = help: consider adding an explicit lifetime bound `<T as MyTrait<'_>>::Output: 'a`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
